Configure React app for deployment to GitHub Pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pricecalbotbs5",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://github.com/WilliamBerm/chatbot-price",
+  "homepage": "https://WilliamBerm.github.io/chatbot-price",
   "type": "module",
   "scripts": {
     "dev": "vite",
